--- a/app/views/users/_googlemapxs.html.erb
+++ b/app/views/users/_googlemapxs.html.erb
@@ -1,4 +1,4 @@
-<div id="googlemap"></div>
+<div id="googlemapxs"></div>
 
 
 <script type="text/javascript">
@@ -19,13 +19,13 @@ var mapOptions = {
     scrollwheel: false,
     scaleControl: false
 };
-  var map = new google.maps.Map(document.getElementById('googlemap'),mapOptions);
+  var map = new google.maps.Map(document.getElementById('googlemapxs'),mapOptions);
 
 	// I'm Centering the map in Bangkok
 	// '13.731547730050778'
 	// '100.56798934936523'
-	var mylat = document.getElementById("lat").value;
-	var mylng = document.getElementById("lng").value;
+	var mylat = document.getElementById("latxs").value;
+	var mylng = document.getElementById("lngxs").value;
 	if (jQuery.isEmptyObject(mylat)) {
 	  var mylat = '13.731548';
 	  var mylng = '100.56799';
@@ -59,7 +59,7 @@ var mapOptions = {
   var infowindow = new google.maps.InfoWindow();
   
   // Address Autocomplete
-  var input = document.getElementById('location_search');
+  var input = document.getElementById('location_searchxs');
   var autocomplete = new google.maps.places.Autocomplete(input);
   autocomplete.bindTo('bounds', map);
   
@@ -67,8 +67,8 @@ var mapOptions = {
 	google.maps.event.addListener(marker, "dragend", function() {
 		var point = marker.getPosition();
 		map.panTo(point);
-		document.getElementById("lat").value = point.lat();
-		document.getElementById("lng").value = point.lng();
+		document.getElementById("latxs").value = point.lat();
+		document.getElementById("lngxs").value = point.lng();
 		infowindow.close();
     marker.setIcon(defaultImage);
   });
@@ -81,8 +81,8 @@ var mapOptions = {
     marker.setPosition(place.geometry.location);
     map.panTo(place.geometry.location);
     map.setZoom(16);
-		document.getElementById("lat").value = place.geometry.location.lat();
-		document.getElementById("lng").value = place.geometry.location.lng();
+		document.getElementById("latxs").value = place.geometry.location.lat();
+		document.getElementById("lngxs").value = place.geometry.location.lng();
 		
 		// Sets the proper image on the marker. ie. school/hospital marker
 		var image = new google.maps.MarkerImage(
