--- a/app/views/users/_form_google_topbar.html.erb
+++ b/app/views/users/_form_google_topbar.html.erb
@@ -7,7 +7,7 @@
             <%= f.hidden_field :lng, class: "col-md-12 col-sm-12", id: "lng" %>
         </div>
         <div class="col-md-8 col-sm-8">
-            <%= text_field_tag :location_search, nil, class: "col-md-12 col-sm-12 search-query", type: "search" %>
+            <%= text_field_tag :location_search, nil, class: "col-md-12 col-sm-12 search-query btn-sm", type: "search" %>
             <%= render partial: "users/googlemap" %>
         </div>
         <div class="col-md-2 col-sm-2" style="margin-left: -25px; padding-top: 5px" >
