--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -3,18 +3,18 @@
 <div class="navbar navbar-fixed-top" role="navigation" style="padding-top: 0px; background-color: #f5f5f5">
   <div>
       <nav class="hidden-xs  ">
-        <div class="col-md-12" style="padding-top: 0px; margin-bottom: -45px" >
-            <div class="col-md-4" style="padding-top: 10px">
+        <div class="col-md-12 col-sm-12" style="padding-top: 0px; margin-bottom: -45px" >
+            <div class="col-md-4 col-sm-4" style="padding-top: 15px">
                     <%=	 render "users/form_google_topbar" %>
             </div>
             <%	 if loc['results'][0].nil? %>
             <%	 else %>
-                <div class="col-md-8" style="padding-top: 15px; margin-bottom: -45px" >
+                <div class="col-md-8 col-sm-8" style="padding-top: 15px; margin-bottom: -45px" >
                   <h2 style="color: black"> <%= loc['results'][0]['address_components'][0]['short_name']  %> </h2>
                 </div>
             <%	 end %>
         </div>
-        <ul class="nav " style="margin-right: 5%; padding-top: 20px">
+        <ul class="nav " style="margin-right: 5%; padding-top: 10px">
           <ul class="pull-right">
             <li id="fat-menu" class="dropdown">
               <% if current_user.photo_file_name.blank?  %>
